{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 30,
  "lineage": "126ba358-8c91-1379-4093-47763767cded",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "ingress-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/nginx-ingress-controller",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx-ingress-controller",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "nginx-ingress-controller",
                  "helm.sh/chart": "nginx-ingress-controller-9.3.33"
                },
                "name": "nginx-ingress-controller",
                "namespace": "default",
                "resource_version": "918",
                "uid": "49323b32-f370-4e79-ae93-c4ede627220f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.219.193",
                "cluster_ips": [
                  "172.20.219.193"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30371,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 31245,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/name": "nginx-ingress-controller"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a49323b32f3704e79ae93c4ede627220-621459006.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c459583d77bbb1c",
            "domain": "vpc",
            "id": "eipalloc-03c459583d77bbb1c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-202-111-90.compute-1.amazonaws.com",
            "public_ip": "34.202.111.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-eip"
            },
            "tags_all": {
              "Name": "eks-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:internet-gateway/igw-0a149591967c86ff5",
            "id": "igw-0a149591967c86ff5",
            "owner_id": "916639932950",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c459583d77bbb1c",
            "connectivity_type": "public",
            "id": "nat-08bd9e90b25c895f2",
            "network_interface_id": "eni-0b0fbcedabbd433b5",
            "private_ip": "10.0.1.189",
            "public_ip": "34.202.111.90",
            "subnet_id": "subnet-0b2eab0e394475be2",
            "tags": {
              "Name": "eks-nat-gw"
            },
            "tags_all": {
              "Name": "eks-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:route-table/rtb-0df0e09725680c973",
            "id": "rtb-0df0e09725680c973",
            "owner_id": "916639932950",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08bd9e90b25c895f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-privateRT"
            },
            "tags_all": {
              "Name": "eks-privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:route-table/rtb-0384ab2d2dd2d2261",
            "id": "rtb-0384ab2d2dd2d2261",
            "owner_id": "916639932950",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a149591967c86ff5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-publicRT"
            },
            "tags_all": {
              "Name": "eks-publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eks-private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078c9ef249cb5b812",
            "route_table_id": "rtb-0df0e09725680c973",
            "subnet_id": "subnet-096f785eab549aa18"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.privateRT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "eks-private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43334c7943fb5cf",
            "route_table_id": "rtb-0df0e09725680c973",
            "subnet_id": "subnet-09e56c875f1b02243"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.privateRT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eks-public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6afd04e89438dc",
            "route_table_id": "rtb-0384ab2d2dd2d2261",
            "subnet_id": "subnet-0b2eab0e394475be2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.publicRT",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "eks-public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fdac06983831790",
            "route_table_id": "rtb-0384ab2d2dd2d2261",
            "subnet_id": "subnet-0ec1652703efaf359"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.publicRT",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:security-group/sg-05ee31233ab7f6cc7",
            "description": "security group for eks cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ee31233ab7f6cc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks_sg",
            "name_prefix": "",
            "owner_id": "916639932950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_sg"
            },
            "tags_all": {
              "Name": "eks_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eks-private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:subnet/subnet-096f785eab549aa18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096f785eab549aa18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916639932950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-1"
            },
            "tags_all": {
              "Name": "eks-private-1"
            },
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "eks-private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:subnet/subnet-09e56c875f1b02243",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e56c875f1b02243",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916639932950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-2"
            },
            "tags_all": {
              "Name": "eks-private-2"
            },
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eks-public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:subnet/subnet-0b2eab0e394475be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2eab0e394475be2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916639932950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-1"
            },
            "tags_all": {
              "Name": "eks-public-1"
            },
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "eks-public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:subnet/subnet-0ec1652703efaf359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec1652703efaf359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916639932950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-2"
            },
            "tags_all": {
              "Name": "eks-public-2"
            },
            "vpc_id": "vpc-02d330172afacfa1c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916639932950:vpc/vpc-02d330172afacfa1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01aaac990cdcf2e81",
            "default_route_table_id": "rtb-05590902f96350e4d",
            "default_security_group_id": "sg-0236baeb67d729405",
            "dhcp_options_id": "dopt-0700f5417bedba295",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d330172afacfa1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05590902f96350e4d",
            "owner_id": "916639932950",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}